fix : navbar spacing + effect backdrop blur

--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -1,5 +1,15 @@
 // scss/_custom-styles.scss
 
+.custom-navbar {
+    background-color: rgba(0, 123, 255, 1);
+    transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
+}
+
+.nav-scroll-shadow {
+    background-color: rgba(0, 123, 255, 0.8) !important; 
+    backdrop-filter: blur(8px);
+}
+
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
